<resources>
    <!-- UI STRINGS -->
    <string name="app_name">BurnBoy</string>
    <string name="title_activity_maps">Your Activity</string>
    <string name="action_maps_label">Map</string>
    <string name="action_licenses">Legal</string>
    <string name="action_history">History</string>
    <string name="action_delete">Delete all</string>
    <string name="service_tracking_started">Activity Tracking Begun</string>
    <string name="service_location_permission_failed">Need permission for location to start logging</string>
    <string name="delete_all_propose">Confirm you REALLY want to delete all logs</string>
    <string name="delete_all_confirm">Deleting all logs...</string>
    <string name="delete_all_undo">All your logs are restored</string>
    <string name="delete_message">All logs deleted</string>
    <string name="delete_undo_message">Restored log</string>
    <string name="delete_fail_message">Unable to delete anything</string>
    <string name="list_distance_label">Distance:</string>
    <string name="list_duration_label">Duration:</string>
    <string name="fab_start_logging">Start logging</string>
    <string name="fab_stop_logging">Stop logging</string>
    <string name="fab_submit_weight">Log weight</string>
    <string name="fab_manual_log_entry">Manually add log</string>
    <string name="notif_logging_movement">Activity tracking started</string>
    <string name="notif_logging_text"></string>
    <string name="notif_action_stop_text">Stop</string>
    <string name="notif_action_view_progress">Progress</string>
    <string name="toast_map_empty">Go for a run to add logs on map</string>
    <string name="toast_tracking_stopped">Tracking stopped</string>
    <string name="toast_tracking_begun">Begun tracking</string>
    <!-- END UI STRINGS -->

    <!-- PERMISSION STRINGS -->
    <string name="rationale_permission_internet">Need internet to find location, ads and access Google Maps</string>
    <string name="rationale_permission_coarse">Need to get approximate location and use Google Maps</string>
    <string name="rationale_permission_fine">Need internet to find accurate location and for Google Maps</string>
    <string name="permission_features_enabled">Features enabled</string>
    <!-- END  PERMISSION STRINGS -->

    <!-- DATE FORMAT STRINGS -->
    <string name="date_display_long">HH:mm:ss aaa - EEE, d MMM, yyyy</string>
    <string name="date_display_HMS">HH:mm:ss aaa - EEE, d MMM, yyyy</string>
    <string name="date_display_simple">HH:mm:ss - EEE, d MMM, yy</string>
    <!-- END DATE FORMAT STRINGS -->

    <!-- LICENSE STRINGS -->
    <string name="license_fab">
        <![CDATA[
        <p><b><i>[Expanding] Floating Action Button</i></p></b>
        <p><b>Copyright 2015 Dmytro Tarianyk</p></b>
<p>
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
</p>
   <p><b>http://www.apache.org/licenses/LICENSE-2.0</b></p>

<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>
        ]]>
    </string>

    //https://github.com/PhilJay/MPAndroidChart
    <string name="license_mpandroidchart">
        <![CDATA[
        <p><b><i>MP Android Chart</i></p></b>
        <p><b>Copyright 2016  Philipp Jahoda</p></b>
<p>
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
</p>
   <p><b>http://www.apache.org/licenses/LICENSE-2.0</b></p>

<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>
        ]]>
    </string>

    <!-- END LICENSE STRINGS -->

    <!-- MANIFEST STRINGS -->
    <string name="service_movement_tracking_description">A service that is used to track location when user starts logging activity</string>
    <string name="service_movement_tracking_name">Fitness tracker service</string>
    <string name="service_movement_tracking_label">Movement Log</string>
    <!-- END MANIFEST STRINGS -->

    <!-- ADS -->
    <string name="main_activity_banner_ad_unit_id">ca-app-pub-1105785661696607/4702127979</string>
    <string name="app_ad_id">ca-app-pub-1105785661696607~1748661573</string>
    <!-- END ADS -->

    <!-- API KEYS -->

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBS3gFGHSL8bIuW49iIUto88OcxhlAyxuI
    </string>


    <!-- API KEYS -->
    <!-- TAG KEYS -->
    <string name="row_delete_key">row_delete_key</string>
    <!-- END TAG KEYS -->



</resources>
