<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/action_maps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/expanded_map_button"
        android:layout_margin="15dp"
        android:isScrollContainer="true" />

    <TextView
        android:text="@string/list_distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expanded_distance_label"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@+id/expanded_map_button"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/list_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expanded_duration_label"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/expanded_distance_label"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
</RelativeLayout>