<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="devicroft.burnboy.Activities.MainActivity">


    <com.google.android.gms.ads.AdView
        android:id="@+id/main_banner_ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/main_activity_banner_ad_unit_id"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        fab:menu_colorNormal="#DA4336"
        fab:menu_colorPressed="#E75043"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_fab_label=""
        fab:menu_fab_show_animation="@anim/fab_scale_down"
        fab:menu_fab_hide_animation="@anim/fab_scale_up"
        android:layout_above="@+id/main_banner_ad_view"
        android:layout_alignParentEnd="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/cast_ic_expanded_controller_stop"
            fab:fab_colorNormal="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            fab:fab_colorPressed="@color/cast_intro_overlay_button_background_color"
            fab:fab_colorRipple="@color/cast_expanded_controller_ad_label_background_color"

            app:fab_label="@string/fab_manual_log_entry" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_start_logging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/icon_run"
            fab:fab_colorNormal="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            fab:fab_colorPressed="@color/cast_intro_overlay_button_background_color"
            fab:fab_colorRipple="@color/cast_expanded_controller_ad_label_background_color"
            app:fab_label="@string/fab_start_logging" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_log_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/icon_scales"
            fab:fab_colorNormal="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            fab:fab_colorPressed="@color/cast_intro_overlay_button_background_color"
            fab:fab_colorRipple="@color/cast_expanded_controller_ad_label_background_color"
            app:fab_label="@string/fab_submit_weight" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
